# TickFlow

./: .env.example  .gitignore  BUILD_PROGRESS.md  Dockerfile  README.md  app.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  test_qwen_workflow.py
data/: customers.json  orders.json  policies.json
server/: app.py
tasks/: __init__.py
tests/: __init__.py  test_api.py  test_env.py  test_graders.py
utils/: __init__.py
